public/css/business/responsive.css
@media (min-width: 992px) and (max-width: 1199px) {
    a#view-broadcast {
        font-size: 15px;
    }
}
@media (min-width: 980px) and (max-width: 991px) {
    #bizTab li a {
        padding: 11px;
    }
}
@media (min-width: 768px) and (max-width: 979px) {
    .dnmobile {
        display: none;
    }
    .dndesktop {
        display: block!important;
    }
    .nav-tabs > li {
        width: 50%;
    }
    .biz-navs {
        margin-top: 0px;
    }
    .dndesktop a {
        height: 50px;
    }
    .biz-navs .nav-tabs li a {
        border-radius: 0!important;
    }
    .well a.btn-boxy {
        margin-bottom: 20px;
    }
}
@media (min-width: 480px) and (max-width: 768px) {
    .row.assigned-business #box-wrapper {
        margin-left: 15px;
        margin-right: 15px;
    }
    .dnmobile {
        display: none;
    }
    .nav-tabs > li {
        float:left;
        width: 50%;
    }
    .dndesktop {
        display: block!important;
    }
    .dndesktop a {
        height: 50px;
    }
    .biz-details-wrap,
    #bizTab {
        padding-left: 15px;
        padding-right: 15px;
    }
    #bizTabContent {
        margin-left: 15px;
        margin-right: 15px;
    }
    .biz-navs .nav-tabs li a {
        border-radius: 0!important;
    }
    .biz-navs {
        margin-top: 0px;
    }
    nav.pull-right {
        float: none!important;
    }
    .delete-terminal-button {
        margin-top: 4px;
    }
    .well a.btn-boxy {
        margin-bottom: 20px;
    }
    .activated {
        line-height: 32px;
        margin-bottom: 20px;
    }
    .btn-removeuser, .btn-adduser {
        width: 90px;
    }
    .delete-terminal-button, .edit-terminal-button, .update-terminal-button {
        width: 90px;
    }
    .cancel-adduser, .cancel-add-terminal  {
        margin-top: 4px;
    }
    .navbar-collapse.collapse {
        background-color: #080808;
    }
    .navbar-nav .open .dropdown-menu>li>a {
        padding: 20px 15px;
    }
    .navbar-inverse {
        background-color: rgba(7, 10, 3, 1);
    }
    .mobile-hidden {
        display: none;
    }
}
@media (max-width: 480px) {
    .row.assigned-business #box-wrapper {
        margin-left: 15px;
        margin-right: 15px;
    }
    .dnmobile {
        display: none;
    }
    .nav-tabs > li {
        width: 50%;
    }
    .dndesktop {
        display: block!important;
    }
    .dndesktop a {
        height: 45px;
    }
    .biz-details-wrap,
    #bizTab {
        padding-left: 15px;
        padding-right: 15px;
    }
    #bizTabContent {
        margin-left: 15px;
        margin-right: 15px;
    }
    .biz-navs .nav-tabs li a {
        border-radius: 0;
        font-size: 11px;
        padding-left: 10px;
        padding-right: 10px;
    }
    .biz-navs {
        margin-top: 0px;
    }
    nav.pull-right {
        float: none!important;
    }
    .delete-terminal-button {
        margin-top: 4px;
    }
    .well a.btn-boxy {
        margin-bottom: 20px;
    }
    .activated {
        line-height: 32px;
        margin-bottom: 20px;
    }
    .btn-removeuser, .btn-adduser {
        width: 90px;
    }
    .delete-terminal-button, .edit-terminal-button, .update-terminal-button {
        width: 90px;
    }
    .cancel-adduser, .cancel-add-terminal  {
        margin-top: 4px;
    }
    .navbar-collapse.collapse {
        background-color: #080808;
    }
    .navbar-nav .open .dropdown-menu>li>a {
        padding: 20px 15px;
    }
    .navbar-inverse {
        background-color: rgba(7, 10, 3, 1);
    }
    .edit-biz.process-queue {
        height: 70px!important;
    }
    .biz-terminals {
        height: 70px!important;
    }
    .biz-terminals a:hover {
        height: 70px;
    }
    #biz-grid .boxed .title {
        margin-top: 10px;
    }
}
@media (max-width: 320px) {
    .row.assigned-business #box-wrapper {
        margin-left: 15px;
        margin-right: 15px;
    }
    .dnmobile {
        display: none;
    }
    .nav-tabs > li {
        width: 50%;
    }
    .dndesktop {
        display: block!important;
    }
    .dndesktop a {
        height: 45px;
    }
    .biz-details-wrap,
    #bizTab {
        padding-left: 15px;
        padding-right: 15px;
    }
    #bizTabContent {
        margin-left: 15px;
        margin-right: 15px;
    }
    .biz-navs .nav-tabs li a {
        border-radius: 0;
        font-size: 11px;
        padding-left: 10px;
        padding-right: 10px;
    }
    .biz-navs {
        margin-top: 0px;
    }
    nav.pull-right {
        float: none!important;
    }
    .delete-terminal-button {
        margin-top: 4px;
    }
    .well a.btn-boxy {
        margin-bottom: 20px;
    }
    .activated {
        line-height: 32px;
        margin-bottom: 20px;
    }
    .btn-removeuser, .btn-adduser {
        width: 90px;
    }
    .delete-terminal-button, .edit-terminal-button, .update-terminal-button {
        width: 90px;
    }
    .cancel-adduser, .cancel-add-terminal {
        margin-top: 4px;
    }
    .navbar-collapse.collapse {
        background-color: #080808;
    }
    .navbar-nav .open .dropdown-menu>li>a {
        padding: 20px 15px;
    }
    .navbar-inverse {
        background-color: rgba(7, 10, 3, 1);
    }
    .edit-biz.process-queue {
        height: 70px!important;
    }
    .biz-terminals {
        height: 70px!important;
    }
    .biz-terminals a:hover {
        height: 70px;
    }
    #biz-grid .boxed .title {
        margin-top: 10px;
    }
}

